--- a/style.css
+++ b/style.css
@@ -12,9 +12,10 @@ header a{
 }
 footer{
     font-size: 40px;
-    width: 100%;
     position: fixed;
-    bottom: 0px;
+    bottom: 3px;
+    right: 3px;
+    left:3px;
     background-color: grey;
 }
 #footerText{
